--- a/funcionario/templates/funcionario/login.html
+++ b/funcionario/templates/funcionario/login.html
@@ -5,17 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Funcionário</title>
   <link rel="stylesheet" href="/static/css/login.css">
+  <style>
+    .messages {
+      margin-bottom: 1rem;
+    }
+    .message-success {
+      color: green;
+      font-weight: bold;
+    }
+    .message-error {
+      color: red;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
 
-  <img class="logo" src="/static/img/freddy-logo.png" alt="Logo Freddy">
+  <img class="logo" src="/static/img/logo.png" alt="Logo Freddy">
 
   <div class="login-box">
     <h2>Login do Funcionário</h2>
+
     {% if messages %}
       <div class="messages">
         {% for message in messages %}
-          <p>{{ message }}</p>
+          <p class="message-{{ message.tags }}">{{ message }}</p>
         {% endfor %}
       </div>
     {% endif %}
@@ -34,7 +48,6 @@
 
       <button type="submit">Entrar</button>
       <a href="{% url 'registro_funcionario' %}" class="registro-link">Não tem uma conta? Crie aqui</a>
-
     </form>
   </div>
 
