--- a/home_pizzaria/templates/home.html
+++ b/home_pizzaria/templates/home.html
@@ -18,6 +18,7 @@
         <a href="#sobre-nos">Sobre Nós</a>
         <a href="#contato">Contato</a>
         <a href="cliente/fila">Fila</a>
+        <a href="cliente/cardapio">Cardapio</a>
       </nav>
     </header>
 
