Botao de volta pro home

--- a/funcionario/templates/funcionario/login.html
+++ b/funcionario/templates/funcionario/login.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-  <img class="logo" src="/static/img/logo.png" alt="Logo Freddy">
+  <a href="/"><img class="logo" src="/static/img/logo.png" alt="Logo Freddy"></a>
 
   <div class="login-box">
     <h2>Login do Funcionário</h2>
