--- a/funcionario/templates/funcionario/home_page.html
+++ b/funcionario/templates/funcionario/home_page.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home Page - Pedidos</title>
-    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <a href="/"><link rel="stylesheet" href="{% static 'css/home.css' %}"></a>
 </head>
 
 <body>
