--- a/funcionario/templates/funcionario/registro.html
+++ b/funcionario/templates/funcionario/registro.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="logo">
-        <img src="{% static 'img/logo.png' %}" alt="Logo Freddy" />
+        <a href="/"><img src="{% static 'img/logo.png' %}" alt="Logo Freddy" /></a>
     </div>
 
     <div class="form-box">
