--- a/home_pizzaria/templates/home.html
+++ b/home_pizzaria/templates/home.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <img src="{% static 'img/logo.png' %}" alt="Logo Pizzaria" class="logo" />
+      <a href="/"><img src="{% static 'img/logo.png' %}" alt="Logo Pizzaria" class="logo"/></a>
       <nav>
         <a href="#">Home</a>
         <a href="#sobre-nos">Sobre Nós</a>
