--- a/cliente/templates/cliente/fazer_pedido.html
+++ b/cliente/templates/cliente/fazer_pedido.html
@@ -111,6 +111,12 @@
         {{ form.tamanho.errors }}
       </div>
 
+      <div>
+        {{ form.forma_de_pagamento.label_tag }}
+        {{ form.forma_de_pagamento }}
+        {{ form.forma_de_pagamento.errors }}
+      </div>
+
       <button type="submit">Enviar Pedido</button>
     </form>
   </div>
