--- a/cliente/templates/cliente/formulario.html
+++ b/cliente/templates/cliente/formulario.html
@@ -53,6 +53,14 @@
             {% endfor %}
         </select><br><br>
 
+        <label>Forma de Pagamento:</label><br>
+        <select name="Forma de Pagamento">
+            <option>Crédito</option>
+            <option>Debíto</option>
+            <option>Dinheiro</option>
+            <option>Pix</option>
+        </select><br><br>
+
         <button type="submit">Enviar Pedido</button>
     </form>
     <h1>Resumo do pedido</h1>
